--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,14 @@
-// 全局样式文件
-
 // 加载图标样式
 @import "./icon.less";
+
+// 全局样式文件
+body {
+    background-color: #f5f7f9;
+  }
+  
+  .page-nav-bar {
+    background-color: #3296fa;
+    .van-nav-bar__title {
+      color: #fff;
+    }
+  }
